Fix align issue

--- a/HW2/styles/styles.css
+++ b/HW2/styles/styles.css
@@ -1,5 +1,6 @@
 /*resets*/
-html, body, div, span, applet, object, iframe,
+/*div,*/
+html, body, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -16,17 +17,19 @@ time, mark, audio, video
     margin: 0;
     padding: 0;
     border: 0;
-    vertical-align: baseline;
+    /*vertical-align: baseline;*/
 }
 
 
 nav {
-    float: left; width: 10%;
+    float: left;
+    width: 10%;
     text-align: left;
 }
 
 main {
-    float: left; width: 70%;
+    float: left;
+    width: 70%;
 }
 
 aside{
